force-app/main/default/objects/Assignment_Activity__c/Assignment_Activity__c.object-meta.xml
<CustomObject>
    <description
  >Custom child record of Project Assignments.  Allows users to log customized activity records to Project Assignments that Roll-Up into fields at both the Assignment, and Project level.</description>
    <label>Assignment Activity</label>
    <nameField>
        <label>Activity Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assignment Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>