force-app/main/default/objects/Assignment_Activity__c/fields/Billing_Month__c.field-meta.xml
<CustomField>
    <fullName>Billing_Month__c</fullName>
    <formula>IF(DAY(Date__c)&lt;27,DATE(YEAR(Date__c),MONTH(Date__c),26),
IF(MONTH(Date__c)=12,DATE(YEAR(Date__c)+1,MONTH(Date__c)-11,26),
DATE(YEAR(Date__c),MONTH(Date__c)+1,26)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Month</label>
    <type>Date</type>
</CustomField>