force-app/main/default/objects/Assignment_Activity__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <description>The number of hours spent on this activity.</description>
    <inlineHelpText>The number of hours spent on this activity.</inlineHelpText>
    <label>Hours</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>