force-app/main/default/objects/Assignment_Activity__c/fields/Hours_Status__c.field-meta.xml
<CustomField>
    <fullName>Hours_Status__c</fullName>
    <formula>IF(
Date__c  &gt;= Project_Assignment__r.Project__r.Start_Date__c, &quot;Active&quot;, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Status</label>
    <type>Text</type>
</CustomField>