force-app/main/default/objects/Assignment_Activity__c/fields/Number_of_Completed_Items__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Completed_Items__c</fullName>
    <description
  >This is the number of items completed for this activity.  Number of completed interview, number of contacts added, etc.</description>
    <inlineHelpText
  >This is the number of items completed for this activity.  Number of completed interview, number of contacts added, etc.</inlineHelpText>
    <label>Completed Items</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>