force-app/main/default/objects/Assignment_Activity__c/fields/Project_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Project_Assignment__c</fullName>
    <description
  >The project assignment that this assignment activity is working towards completing.</description>
    <inlineHelpText
  >The project assignment that this assignment activity is working towards completing.</inlineHelpText>
    <label>Project Assignment</label>
    <referenceTo>Project_Assignment__c</referenceTo>
    <relationshipLabel>Assignment Activities</relationshipLabel>
    <relationshipName>Assignment_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>